--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Home</title>
+</head>
+<body>
+  <p>
+    Select a button to get redirected to that tool
+  </p>
+ <div class="buttons">
+   <a href="https://connor33341.github.io/Alert-system" class="btn-github"><button class="linkbtn">Alert system</button></a>
+ </div>
+</body>
+</html>
