--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>Home</title>
 </head>
 <body>
+  <h1>
+    connor33341's git hub tools and games
+  </h1>
   <p>
     Select a button to get redirected to that tool
   </p>
