--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     Select a button to get redirected to that tool
   </p>
  <div class="buttons">
-   <a href="https://connor33341.github.io/Alert-system" class="btn-github"><button class="linkbtn">Alert system</button></a>
+   <a href="https://connor33341.github.io/AlertSystems" class="btn-github"><button class="linkbtn">Alert system</button></a>
  </div>
 </body>
 </html>
