Added a list and link buttons

--- a/LearnToCode/index.html
+++ b/LearnToCode/index.html
@@ -2,9 +2,19 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>title</title>
+  <title>Coding</title>
 </head>
 <body>
-
+	<h1>Learn to code</h1>
+	<details>
+		<summary>Lua 5.4 lessons</summary>
+		<p>Here is a list of all the lessons and the links to them</p>
+		<ol>
+			<li>What is lua?<div class="buttons"></div><a href="",class="btn-github"><button class="linkbtn"">Lesson 1</button></a></li>
+			<li>Understanding lua<div class="buttons"></div><a href="",class="btn-github"><button class="linkbtn"">Lesson 2</button></a></li>
+	</ol>
+	</details>
+<script>
+</script>
 </body>
 </html>
