--- a/LearnToCode/LearnLua/index.html
+++ b/LearnToCode/LearnLua/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>title</title>
+</head>
+<body>
+  <h1>Nothing here</h1>
+  <p>Click on a button to get redirected</p>
+  
+</body>
+</html>
