--- a/LearnToCode/LearnLua/index.html
+++ b/LearnToCode/LearnLua/index.html
@@ -7,6 +7,9 @@
 <body>
   <h1>Nothing here</h1>
   <p>Click on a button to get redirected</p>
-  
+   <div class="buttons">
+   <a href="https://connor33341.github.io" class="btn-github"><button class="linkbtn">🏡 Return home</button></a>
+   <a href="https://connor33341.github.io/LearnToCode" class="btn-github"><button class="linkbtn">Head to learn to code home page</button></a>
+ </div>
 </body>
 </html>
