--- a/LearnToCode/LearnLua/Lesson1/index.html
+++ b/LearnToCode/LearnLua/Lesson1/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>title</title>
+</head>
+<body>
+  <h1>Lesson 1: What is lua?</h1>
+  <p>
+    Lua is a programing lanuage made by <a href="https://en.wikipedia.org/wiki/Roberto_Ierusalimschy">Roberto Ierusalimschy</a> in 1993.
+  </p>
 
+</body>
+</html>
