--- a/LearnToCode/index.html
+++ b/LearnToCode/index.html
@@ -10,7 +10,7 @@
 		<summary>Lua 5.4 lessons</summary>
 		<p>Here is a list of all the lessons and the links to them</p>
 		<ol>
-			<li>What is lua?<div class="buttons"></div><a href="connor33341.github.io/LearnToCode/LearnLua/Lesson1",class="btn-github"><button class="linkbtn"">Lesson 1</button></a></li>
+			<li>What is lua?<div class="buttons"></div><a href="LearnLua/Lesson1",class="btn-github"><button class="linkbtn"">Lesson 1</button></a></li>
 			<li>Understanding lua<div class="buttons"></div><a href="",class="btn-github"><button class="linkbtn"">Lesson 2</button></a></li>
 	</ol>
 	</details>
