--- a/LearnToCode/LearnLua/index.html
+++ b/LearnToCode/LearnLua/index.html
@@ -10,6 +10,10 @@
    <div class="buttons">
    <a href="https://connor33341.github.io" class="btn-github"><button class="linkbtn">🏡 Return home</button></a>
    <a href="https://connor33341.github.io/LearnToCode" class="btn-github"><button class="linkbtn">Head to learn to code homepage</button></a>
+    <p>
+     Lua handbook:
+    </p>
+     <iframe src="https://www.lua.org/manual/5.4/"></iframe>
  </div>
 </body>
 </html>
