--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
  <div class="buttons">
    <a href="https://connor33341.github.io/AlertSystems" class="btn-github"><button class="linkbtn">Alert system</button></a>
    <a href="https://connor33341.github.io/LearnToCode" class="btn-github"><button class="linkbtn">Learn to code</button></a>
+   <a href="https://connor33341.github.io/WebBrowser" class="btn-github"><button class="linkbtn">Learn to code</button></a>
  </div>
 </body>
 </html>
