--- a/LearnToCode/LearnLua/Lesson1/index.html
+++ b/LearnToCode/LearnLua/Lesson1/index.html
@@ -7,11 +7,11 @@
 <body>
   <h1>Lesson 1: What is lua?</h1>
   <p>
-    Lua is a programing lanuage made by <a href="https://en.wikipedia.org/wiki/Roberto_Ierusalimschy" width = "100%">Roberto Ierusalimschy</a> in 1993.
+    Lua is a programing lanuage made by <a href="https://en.wikipedia.org/wiki/Roberto_Ierusalimschy">Roberto Ierusalimschy</a> in 1993.
     More from wikipedia.org:
     <iframe src="https://en.wikipedia.org/wiki/Lua_(programming_language)" width = "100%"></iframe>
     More from Lua.org:
-    <iframe src="https://www.lua.org/manual/5.4/"></iframe>
+    <iframe src="https://www.lua.org/manual/5.4/" width = "100%"></iframe>
   </p>
 
 </body>
