--- a/WebBrowser/beataindex.html
+++ b/WebBrowser/beataindex.html
@@ -7,9 +7,12 @@
 <body>
   <h1>Web Browser</h1>
 	<p>This web browser allows you to load sites right from github without them being on you search history</p>
-	<textarea placeholder = "Enter web url here" id = "txbx"></textarea>
+	<input type = "url" id = txbx placeholder = "Type url here">
 	<button onclick = LoadWebpage()>Load webpage</button>
 	<input type = "checkbox" id = "cbox">Auto use headers
+	<input type = "search" id = "search" placeholder = "Search">
+	<button onclick = Search()>Search</button>
+	<input type = "checkbox" id = "schbx">Display results in frame
 	<iframe src="" width = "100%" height = "1000" id = "view"></iframe>
 <script>
 function LoadWebpage() {
@@ -24,6 +27,19 @@ if (cbox.checked == true) {
 else {
 alert("loading")
 frame.src = Textarea.value
+}
+}
+function Search() {
+const Header = "https://www.google.com/search?q=" //I don't know if google will connect but I hope it would
+const SearchArea = document.getElementById("search")
+const Searchbox = document.getElementById("schbx")
+const frame = document.getElementById("view")
+if (Searchbox.checked == true) {
+alert("Loading")
+frame.src = Header+SearchArea.value
+}
+else {
+alert("Feature not avaible")
 }
 }
 </script>
