--- a/WebBrowser/404.html
+++ b/WebBrowser/404.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>iframe</title>
+</head>
+<body>
+  <h1>Page not found (Error 404)</h1>
+  <p>Check the url, the url must be exact.<a href="https://example.com">Click here to learn more</a></p>
+</body>
+</html>
