--- a/WebBrowser/404.html
+++ b/WebBrowser/404.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Page not found (Error 404)</h1>
-  <p>Check the url, the url must be exact.<a href="https://example.com">Click here to learn more</a></p>
+  <p>Check the url, the url must be exact.<a href="https://connor33341.github.io/WebBrowser/learnmoreindex.html">Click here to learn more</a></p>
 </body>
 </html>
