--- a/WebBrowser/beataindex.html
+++ b/WebBrowser/beataindex.html
@@ -46,7 +46,7 @@ window.open(Header+SearchArea.value)
 }
 function Reset() {
 const frame = document.getElementById("view")
-var alert = confirm("Do you want to browser")
+var alert = confirm("Do you want to reset the page?")
 const SearchArea = document.getElementById("search")
 const Searchbox = document.getElementById("schbx")
 const Textarea = document.getElementById("txbx")
