--- a/WebBrowser/learnmoreindex.html
+++ b/WebBrowser/learnmoreindex.html
@@ -8,7 +8,7 @@
   <h1>404 error</h1>
   <p>When typing a url you might get a page saying error 404, you get this because you typed the wrong url.
   How to fix:
-    To fix the error you need to turn "Auto use headers" off then type the full url.(Example: https://example.com) When you have "Auto use headers" turned on it will add the "https://" part to it.(Example:http://--What ever text you had in the url box--)
+    To fix the error you need to turn "Auto use headers" off then type the full url.(Example: https://example.com) When you have "Auto use headers" turned on it will add the "https://" part to it.(Example: https://--What ever text you had in the url box--)
   </p>
 </body>
 </html>
