--- a/404.html
+++ b/404.html
@@ -6,6 +6,8 @@
 </head>
 <body>
   <h1>Error 404 (Not found)</h1>
-  <p>Check the url, the requested site does not exist</p>
+  <p>Check the url, the requested site does not exist.
+  If you are getting this error on the tool Web Browser then <a href="https://connor33341.github.io/WebBrowser/404.html">click here.</a>
+  </p>
 </body>
 </html>
