--- a/WebBrowser/beataindex.html
+++ b/WebBrowser/beataindex.html
@@ -39,7 +39,7 @@ const SearchArea = document.getElementById("search")
 const Searchbox = document.getElementById("schbx")
 const frame = document.getElementById("view")
 var Linkinsnake = ""
-var lowerValue = SearchArea.value
+var lowerValue = SearchArea.value.toLowerString()
    var length = lowerValue.length
      for (let i = 0; i < length; i++) {
         var letter = lowerValue.charAt(i)
