--- a/WebBrowser/beataindex.html
+++ b/WebBrowser/beataindex.html
@@ -36,21 +36,11 @@ console.log("Loaded webpage")
 }
 }
 function Search() {
-const Header = "https://wikipedia/wiki/" //I don't know if google will connect but I hope it would
+const Header = "https://wikipedia/wiki/" //
 const SearchArea = document.getElementById("search")
 const Searchbox = document.getElementById("schbx")
 const frame = document.getElementById("view")
 var Linkinsnake = ""
-var lowerValue = SearchArea.value.toLowerString()
-var length = lowerValue.length
-for (let i = 0; i < length; i++) {
-var letter = lowerValue.charAt(i)
-if (letter == " ") {
-Linkinsnake += "_"
-} else {
-Linkinsnake += letter
-}
-}
 if (Searchbox.checked == true) {
 alert("Loading")
 frame.src = Header+Linkinsnake
