--- a/WebBrowser/beataindex.html
+++ b/WebBrowser/beataindex.html
@@ -20,7 +20,7 @@ layout: default
 	<iframe src="" width = "100%" height = "1000" id = "view"></iframe>
 <script>
  function snake(text) {
-            var lowerValue = text.toLowerString()
+            var lowerValue = text.toLowerCase()
             var length = lowerValue.length
             output.value = ""
             for (let i = 0; i < length; i++) {
