--- a/WebBrowser/beataindex.html
+++ b/WebBrowser/beataindex.html
@@ -54,7 +54,7 @@ const Header = "https://wikipedia/wiki/" //
 const SearchArea = document.getElementById("search")
 const Searchbox = document.getElementById("schbx")
 const frame = document.getElementById("view")
-var Linkinsnake = snake(SaerchArea.value)
+var Linkinsnake = snake(SearchArea.value)
 if (Searchbox.checked == true) {
 alert("Loading")
 frame.src = Header+Linkinsnake
