--- a/WebBrowser/beataindex.html
+++ b/WebBrowser/beataindex.html
@@ -19,21 +19,6 @@ layout: default
 	<button onclick = Reset()>Reset</button>
 	<iframe src="" width = "100%" height = "1000" id = "view"></iframe>
 <script>
- function snake(text) {
-            var lowerValue = text.toLowerCase()
-            var length = lowerValue.length
-	    var opt = ""
-            output.value = ""
-            for (let i = 0; i < length; i++) {
-              var letter = lowerValue.charAt(i)
-              if (letter == " ") {
-                opt += "_"
-              } else {
-                opt += letter
-              }
-            }
-            return opt
-          }
 function LoadWebpage() {
 const Header = "https://"
 const Textarea = document.getElementById("txbx")
@@ -55,7 +40,18 @@ const Header = "https://wikipedia/wiki/" //
 const SearchArea = document.getElementById("search")
 const Searchbox = document.getElementById("schbx")
 const frame = document.getElementById("view")
-var Linkinsnake = snake(SearchArea.value)
+var Linkinsnake = ""
+ var lowerValue = text.toLowerCase()
+            var length = lowerValue.length
+            for (let i = 0; i < length; i++) {
+              var letter = lowerValue.charAt(i)
+              if (letter == " ") {
+                Linkinsnake += "_"
+              } else {
+                Linkinsnake += letter
+              }
+            }
+          }
 if (Searchbox.checked == true) {
 alert("Loading")
 frame.src = Header+Linkinsnake
