--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ layout: default
    <a href="https://connor33341.github.io/AlertSystems" class="btn-github"><button class="linkbtn">Alert system</button></a>
    <a href="https://connor33341.github.io/LearnToCode" class="btn-github"><button class="linkbtn">Learn to code</button></a>
    <a href="https://connor33341.github.io/WebBrowser" class="btn-github"><button class="linkbtn">Web Browser</button></a>
+   <a href="https://connor33341.github.io/RandomPassword" class="btn-github"><button class="linkbtn">Random Passowrdr</button></a>
  </div>
 </body>
 </html>
