--- a/RandomPassword/index.html
+++ b/RandomPassword/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>RandomPassword</title>
+</head>
+<body>
+  <h1>
+    Random Password
+  </h1>
+  <p>
+    Easy and fast way to make a password
+  </p>
+</body>
+</html>
