--- a/RandomPassword/index.html
+++ b/RandomPassword/index.html
@@ -10,6 +10,9 @@
   </h1>
   <p>
     Easy and fast way to make a password
+    <input type = "number" id = "dig" placeholder = "Digits">
+    <input type = "password" id = "pass" placeholder = "Your password will be here">
+    <button>Password</button>
   </p>
 </body>
 </html>
