--- a/WebBrowser/beataindex.html
+++ b/WebBrowser/beataindex.html
@@ -66,6 +66,10 @@ cbox.checked = false
 console.log("Reset UI")
 }
 }
+function SetCookie(Name,Data) {
+var CookieName = Name+"="
+document.cookie = CookieName+Data
+}
 </script>
 </body>
 </html>
