--- a/WebBrowser/beataindex.html
+++ b/WebBrowser/beataindex.html
@@ -44,7 +44,7 @@ function getCookie(cname) {
 }
 function LoadLastPage() {
  const frame = document.getElementById("view")
- frame.scr = getCookie("Sch")
+ frame.src = getCookie("Sch")
 }
 function LoadWebpage() {
 const Header = "https://"
