--- a/WebBrowser/beataindex.html
+++ b/WebBrowser/beataindex.html
@@ -6,6 +6,7 @@ layout: default
 <head>
   <meta charset="UTF-8">
   <title>Browser</title>
+  <link rel="icon" href="/assets/WebBroIcn.png">
 </head>
 <body>
   <h1>Web Browser</h1>
