--- a/RandomPassword/index.html
+++ b/RandomPassword/index.html
@@ -16,7 +16,7 @@
   </p>
 <script>
   const Characters = ["a","A","b","B","c","C","d","D","e","E","f","F","g","G","h","H","i","I","j","J","k","K","l","L","m","M","n","N","o","O","p","P","q","Q","r","R","s","S","t","T","u","U","v","V","w","W","x","X","y","Y","z","Z","1","2","3","4","5","6","7","8","9","0","-","_","+","=","~"]
-  var numberofchar = #Characters
+  var numberofchar = Characters.length
   function MakePassword() {
   var length = document.getElementById("Digits")
   var Pasbox = document.getElementById("pass")
