Fixed bug preventing data to load

--- a/WebBrowser/beataindex.html
+++ b/WebBrowser/beataindex.html
@@ -18,7 +18,7 @@ layout: default
 	<button onclick = Search()>Search</button>
 	<input type = "checkbox" id = "schbx">Display results in frame
 	<button onclick = Reset()>Reset</button>
-	<button onclick LoadLastPage()>Load last saved page</button>
+	<button onclick = LoadLastPage()>Load last saved page</button>
 	<p id = "Ckd"></p>
 	<iframe src="" width = "100%" height = "900" id = "view"></iframe>
 <script>
