--- a/WebBrowser/beataindex.html
+++ b/WebBrowser/beataindex.html
@@ -19,7 +19,7 @@ layout: default
 	<input type = "checkbox" id = "schbx">Display results in frame
 	<button onclick = Reset()>Reset</button>
 	<button onclick = LoadLastPage()>Load last saved page</button>
-	<p id = "Ckd" class="backgroundText"></p>
+	<p id = "Ckd" class="backgroundText">Cookie data: </p>
 	<iframe src="" width = "100%" height = "900" id = "view"></iframe>
 <script>
 const CookieDays = 5
