--- a/Games/index.html
+++ b/Games/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Welcome</title>
+</head>
+<body>
+  <h1>
+    You need to login or make an account to play
+  </h1>
+  <p>
+    Accounts only exist to save data and you only need to make a name and a password
+  </p>
+ 
+<script>
+	
+</script>
+</body>
+</html>
