--- a/Games/index.html
+++ b/Games/index.html
@@ -11,6 +11,10 @@
   <p>
     Accounts only exist to save data and you only need to make a name and a password
   </p>
+  <div class="buttons">
+   <a href="" class="btn-github"><button class="linkbtn">Make account</button></a>
+   <a href="" class="btn-github"><button class="linkbtn">Login</button></a>
+ </div>
  
 <script>
 	
