--- a/Games/index.html
+++ b/Games/index.html
@@ -12,7 +12,7 @@
     Accounts only exist to save data and you only need to make a name and a password
   </p>
   <div class="buttons">
-   <a href="" class="btn-github"><button class="linkbtn">Make account</button></a>
+   <a href="/SignUp" class="btn-github"><button class="linkbtn">Make account</button></a>
    <a href="" class="btn-github"><button class="linkbtn">Login</button></a>
  </div>
  
