--- a/Games/SignUp/index.html
+++ b/Games/SignUp/index.html
@@ -12,7 +12,7 @@
     Instruction: Make a username and make a password
   </p>
   <input type = "text" id = "usrnme" placeholder = "Username">
-  <input type = "password" id = "pswd">
+  <input type = "password" id = "pswd" placeholder = "Password">
   <button onclick = MAC()>Set</button>
 <script>
 function setCookie(cname, cvalue, exdays) {
