--- a/Games/index.html
+++ b/Games/index.html
@@ -16,7 +16,7 @@ layout: deafault
   </p>
   <div class="buttons">
    <a href="/Games/SignUp" class="btn-github"><button class="linkbtn">Make account</button></a>
-   <a href="" class="btn-github"><button class="linkbtn">Login</button></a>
+   <a href="/Games/Login" class="btn-github"><button class="linkbtn">Login</button></a>
  </div>
  
 <script>
