--- a/Games/Login/index.html
+++ b/Games/Login/index.html
@@ -47,7 +47,8 @@ if (confirmdata == true) {
 var password = getCookie(Usrn.value)
 if (password == Pswd.value) {
  alert("Logged in as: "+Usrn.value)
-} else {
+} 
+else {
 alert("Invalid password or username")
 }
 }
