--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>connor_33341</title>
+    <link rel="icon" href="/Assets/Icon.ico">
+    <link rel="stylesheet" href="/Assets/main.css">
+    <script src="/Assets/particles.js"></script>
+    <style>
+        #particles-js{
+            width: 100vw;
+            height: 100vh;
+        }
+    </style>
+</head>
+<body>
+    <div id="particles-js"></div>
+</body>
+</html>
