--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 </head>
 <body>
     <div id="particles-js"></div>
+    <script>
+        particlesJS.load('particles-js', '/Assets/particles-config.json', function() {});
+    </script>
 </body>
 </html>
