--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
             width: 100vw;
             height: 100vh;
         }
+         body{
+            margin: 0px;
+            overflow: hidden;
+            background-color: #373955;
+        }
+        .card{
+          background-color: rgb(240, 235, 235);
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          padding: 10px;
+          padding-top: 5px;
+          font-family: sans-serif;
+          text-align: center;
+          border-radius: 5px;
+          max-width: 350px;
+        }
     </style>
 </head>
 <body>
