--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
           text-align: center;
           border-radius: 5px;
           max-width: 350px;
+          color: white;
         }
+        
     </style>
 </head>
 <body>
     <div id="particles-js"></div>
+    <div class="card">
+        <h1>connor_33341</h1>
+        <h2>I make random stuff</h2>
+    </div>
     <script>
         particlesJS.load('particles-js', '/Assets/particlesjs-config.json', function() {});
     </script>
