--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             background-color: #373955;
         }
         .card{
-          background-color: rgb(240, 235, 235);
+          background-color: #0c0c0cef;
           position: absolute;
           left: 50%;
           top: 50%;
