--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
           border-radius: 5px;
           max-width: 350px;
         }
-        .card h1,p{
+        .card h1,p,h2{
            color: white;
+        }
+        .card .Buttons{
+            border-radius: 2px;
+            border-style: groove;
+            border-color: white;
         }
     </style>
 </head>
