--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 Button.setAttribute("aria-label", tip)
                 Button.setAttribute("data-balloon-pos", "up")
                 Buttons.appendChild(Button)
-                button.addEventListener("click", () => {
+                Button.addEventListener("click", () => {
                      main.style.display = "none"
                     newCard.style.display = "unset"
                 })
