--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         .card h1,p,h2{
            color: white;
         }
-        a{
+        button{
             border-radius: 2px;
             border-style: solid;
             border-color: white;
-						border-width: thin;
-						color: white;
-						padding: 2px;
+			border-width: thin;
+			color: white;
+			padding: 2px;
         }
 		.card .Buttons{
 			padding: 10px;
