--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>connor_33341</title>
     <link rel="icon" href="/Assets/Icon.ico">
     <link rel="stylesheet" href="/Assets/main.css">
-    <script src="/Assets/redirect"></script>
+    <script src="/Assets/redirect.js"></script>
     <script src="/Assets/particles.js"></script>
     <style>
         #particles-js{
