--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         .card h1,p,h2{
            color: white;
         }
-        button{
+        .card .Buttons button{
             border-radius: 2px;
             border-style: solid;
             border-color: white;
