--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			border-width: thin;
 			color: white;
 			padding: 2px;
+            background-color: black;
         }
 		.card .Buttons{
 			padding: 10px;
