--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <script>
         const Buttons = document.getElementById("Buttons")
-        const ButtonsArray = [["Products","","See the latest software"],["Tools","","Find useful tools made my me"],["Databases","","Find a database system that works for you"]]
+        const ButtonsArray = [["Products","/products","Find sofrware from 3D engines to JS librarys"],["Tools","/tools","Find useful tools that help you get stuff done"],["Databases","","Not public yet"]]
         function WriteGrid(){
             for (let index in ButtonsArray){
                 var object = ButtonsArray[index]
