--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         .card h1,p,h2{
            color: white;
         }
-        .card .Buttons button{
+        button{
             border-radius: 2px;
             border-style: solid;
             border-color: white;
