--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 Button.innerText = Name
                 Buttons.appendChild(Button)
                 Button.addEventListener("click", () => {
+                    console.log(LinkHref)
                     Redirect(LinkHref)
                 })
             }
